--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
                     
                     </li>
                 </ul>
+
+                <h4 class="my-6 text-gray-700">Tools I use</h4>
+                <ul>
+                    <li><img src="/images/vscode.png"</li>
+                    <li><img src="/images/firebase.png"</li>
+                    <li><img src="/images/mongodb.png"</li>
+                    <li><img src="/images/figma.png"</li>
+                    <li><img src="/images/git.png"</li>
+                </ul>
             </div>
         </div>
         
