scroll margin from top

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
     <!-------About me section-->
-    <div id="about" class="w-full px-12 py-10">
+    <div id="about" class="w-full px-12 py-10 scroll-mt-20">
         <h4 class="text-center mb-2 text-lg">Introduction</h4>
         <h2 class="text-center text-4xl">About Me</h2>
 
@@ -105,12 +105,23 @@
                 </ul>
 
                 <h4 class="my-6 text-gray-700">Tools I use</h4>
-                <ul>
-                    <li><img src="/images/vscode.png"</li>
-                    <li><img src="/images/firebase.png"</li>
-                    <li><img src="/images/mongodb.png"</li>
-                    <li><img src="/images/figma.png"</li>
-                    <li><img src="/images/git.png"</li>
+                <ul class="grid grid-cols-7 items-center justify-center gap-3 max-w-2xl">
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer
+                    hover:translate-y-1 duration-500"><img src="/images/vscode.png" class="w-5 sm:w-7"></li>
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer
+                    hover:translate-y-1 duration-500"><img src="/images/firebase.png" class= "w-5 sm:w-7"></li>
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer
+                    hover:translate-y-1 duration-500"><img src="/images/mongodb.png" class="w-5 sm:w-7"></li>
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer
+                    hover:translate-y-1 duration-500"><img src="/images/figma.png" class="w-5 sm:w-7"></li>
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer
+                    hover:translate-y-1 duration-500"><img src="/images/git.png" class="w-5 sm:w-7"></li>
+
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer
+                    hover:translate-y-1 duration-500"><img src="/images/node-js.png" class="w-5 sm:w-7"></li>
+
+                    <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer
+                    hover:translate-y-1 duration-500"><img src="/images/react.png" class="w-5 sm:w-7"></li>
                 </ul>
             </div>
         </div>
