hero image padding updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         
-        <nav class="flex w-full items-center justify-between z-50 fixed container">
+        <nav class="flex w-full items-center justify-between z-50 fixed container px-3 lg:px-4 xl:px-[8%] py-2">
             <div>
                 <img src="./images/developer (1).png" class="w-14 h-18 m-6 cursor-pointer"/>
             </div>
@@ -52,7 +52,7 @@
 
     <!-------------Hero section----------------------------->
     <div class="w-11/12 h-screen text-center max-w-3xl mx-auto flex flex-col justify-center items-center gap-4">
-        <img src="./images/women-web-developer-with-laptop (1).png" class="w-30 rounded-full">
+        <img src="./images/women-web-developer-with-laptop (1).png" class="w-30 rounded-full mt-14">
         <h1 class="flex gap-2 text-xl md:text-2xl mb-3">Hello Iam Arpita Das Gupta<img src="/images/hand-icon.png" class="w-6"></h1>
         <h3 class="text-3xl sm:text-5xl lg:text-[40px]">I am a frontend developer based in Bengaluru</h3>
         <p class="max-w-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus maxime architecto quos cupiditate dolor dolore, officiis molestias. Distinctio ratione repudiandae earum voluptate qui delectus voluptas culpa optio, unde natus.</p>
