--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!--<div class="w-full h-screen bg-no-repeat"
     style="background-image: url(/images/header-bg-color.png);"></div>-->
 
-    <header>
+    <header">
         
-        <nav class="flex w-full items-center justify-between z-50 fixed container px-3 lg:px-4 xl:px-[8%] py-2">
+        <nav class="flex w-full items-center justify-between z-50 fixed container px-3 lg:px-4 xl:px-[8%] py-2 backdrop-blur">
             <div>
                 <img src="./images/developer (1).png" class="w-14 h-18 m-6 cursor-pointer"/>
             </div>
@@ -52,7 +52,7 @@
 
     <!-------------Hero section----------------------------->
     <div class="w-11/12 h-screen text-center max-w-3xl mx-auto flex flex-col justify-center items-center gap-4">
-        <img src="./images/women-web-developer-with-laptop (1).png" class="w-30 rounded-full mt-14">
+        <img src="./images/women-web-developer-with-laptop (1).png" class="w-30 rounded-full mt-24">
         <h1 class="flex gap-2 text-xl md:text-2xl mb-3">Hello Iam Arpita Das Gupta<img src="/images/hand-icon.png" class="w-6"></h1>
         <h3 class="text-3xl sm:text-5xl lg:text-[40px]">I am a frontend developer based in Bengaluru</h3>
         <p class="max-w-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus maxime architecto quos cupiditate dolor dolore, officiis molestias. Distinctio ratione repudiandae earum voluptate qui delectus voluptas culpa optio, unde natus.</p>
@@ -75,6 +75,17 @@
 
         <div class="flex flex-col lg:flex-row w-full gap-20 my-20 items-center">
             <div class="relative max-w-max mx-auto"><img src="/images/girl-walk-in-autumn-with-her-dog.png" class="w-64 sm:w-80 rounded-3xl max-w-none"></div>
+
+
+            <!--for the text in the image--for better UI-->
+            <div class="bg-white rounded-full text-black">
+                <h3>Click Here To Know
+
+                </h3>
+
+
+            </div>
+
             <div class="flex-1">
                 <p class="mb-10 max-w-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sit! Error sapiente similique, ab beatae cupiditate ducimus dolore temporibus illum.</p>
 
