--- a/index.html
+++ b/index.html
@@ -157,6 +157,35 @@
                     <p class="text-sm text-gray-600 leading-5">Web development is the process of building, programming...</p>
                     <a href="" class="flex items-center gap-2 text-sm mt-5">Read More...<img src="/images/right-arrow-dark.png" class="w-4"></a>
                 </div>
+
+                <!--Second card-->
+                <div class="border border-gray-500 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer
+                    hover:bg-[#fcf4ff]
+                    hover:-translate-y-1 duration-500"><img src="/images/mobile-icon.png" class="w-10">
+                    <h3 class="text-lg">Web Design</h3>
+                    <p class="text-sm text-gray-600 leading-5">Web development is the process of building, programming...</p>
+                    <a href="" class="flex items-center gap-2 text-sm mt-5">Read More...<img src="/images/right-arrow-dark.png" class="w-4"></a>
+                </div>
+
+
+                <!--Third Card-->
+                <div class="border border-gray-500 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer
+                    hover:bg-[#fcf4ff]
+                    hover:-translate-y-1 duration-500"><img src="/images/web-icon.png" class="w-10">
+                    <h3 class="text-lg">Web Design</h3>
+                    <p class="text-sm text-gray-600 leading-5">Web development is the process of building, programming...</p>
+                    <a href="" class="flex items-center gap-2 text-sm mt-5">Read More...<img src="/images/right-arrow-dark.png" class="w-4"></a>
+                </div>
+
+
+                <!--Fourth Card-->
+                <div class="border border-gray-500 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer
+                    hover:bg-[#fcf4ff]
+                    hover:-translate-y-1 duration-500"><img src="/images/web-icon.png" class="w-10">
+                    <h3 class="text-lg">Web Design</h3>
+                    <p class="text-sm text-gray-600 leading-5">Web development is the process of building, programming...</p>
+                    <a href="" class="flex items-center gap-2 text-sm mt-5">Read More...<img src="/images/right-arrow-dark.png" class="w-4"></a>
+                </div>
                     
                 </div>
         </div>
