--- a/index.html
+++ b/index.html
@@ -198,6 +198,22 @@
             <h2 class="text-center text-5xl">My Latest Work</h2>
             <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12">
                 Welcome to my web development portfolio! Explore a collection of projects showcasing my expertise in front-end development.</p>
+
+                <div class="grid grid-cols-4 my-20 gap-5">
+                 <div class="aspect-square bg-[url('./images/work-1.png')] bg-no-repeat bg-cover bg-center relative rounded-lg cursor-pointer group">
+                    <div class="bg-white rounded-md absolute items-center justify-between w-10/12 bottom-5 left-1/2 -translate-x-1/2 duration-500 py-3 px-5 group-hover:bottom-7">
+                        <div>
+                        <h2 class="font-semibold">Frontend Project</h2>
+                        <p class="text-sm text-gray-700">Web Design</p>
+                    </div>
+
+                    <div>
+                        
+                    </div>
+                    </div>
+
+                 </div>
+                </div>
                 </div>
        
 
