--- a/index.html
+++ b/index.html
@@ -201,14 +201,14 @@
 
                 <div class="grid grid-cols-4 my-20 gap-5">
                  <div class="aspect-square bg-[url('./images/work-1.png')] bg-no-repeat bg-cover bg-center relative rounded-lg cursor-pointer group">
-                    <div class="bg-white rounded-md absolute items-center justify-between w-10/12 bottom-5 left-1/2 -translate-x-1/2 duration-500 py-3 px-5 group-hover:bottom-7">
+                    <div class="bg-white rounded-md absolute items-center justify-between w-10/12 bottom-5 left-1/2 -translate-x-1/2 duration-500 py-3 px-5 group-hover:bottom-7 flex">
                         <div>
                         <h2 class="font-semibold">Frontend Project</h2>
                         <p class="text-sm text-gray-700">Web Design</p>
                     </div>
 
                     <div>
-                        
+                      <img src="./images/send-icon.png" class="w-5">  
                     </div>
                     </div>
 
