--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                         <p class="text-sm text-gray-700">Web Design</p>
                     </div>
 
-                    <div>
+                    <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000]
+                    group-hover:bg-lime-300 transition">
                       <img src="./images/send-icon.png" class="w-5">  
                     </div>
                     </div>
