--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
 
                  </div>
                 </div>
+
+                <!--Button-->
+                <a href="#" class="w-max flex items-center justify-center gap-2 text-gray-700 border-[0.5px] rounded-full border-gray-700 mx-auto px-10 py-3 my-20 hover:bg-[#fcf4ff] duration-500">
+                    Show More...<img src="/images/right-arrow-bold.png" class="w-4 gap-2"></a>
                 </div>
        
 
