--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
 
                 <!---Contact--->
                 <div class="w-full px-12 py-20 scroll-mt-20 bg-[url('./images/footer-bg-colur.png')]">
-                    <h4></h4>
-                    <h2></h2>
-                    <p></p>
+                    <h4>Connect with me</h4>
+                    <h2>Get in touch</h2>
+                    <p>I'd love to hear from you! If you have any questions, comments or feedback, please use the form below.</p>
                 </div>
        
 
