--- a/index.html
+++ b/index.html
@@ -277,7 +277,17 @@
                     <h4 class="text-center mb-2 text-lg">Connect with me</h4>
                     <h2 class="text-center text-5xl">Get in touch</h2>
                     <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12">I'd love to hear from you! If you have any questions, comments or feedback, please use the form below.</p>
+
+                    <form action="" class="max-w-2xl mx-auto">
+                        <!--creating a row-->
+                        <div class="mt-20 grid grid-cols-2 gap-6 mb-8">
+                            <input type="text" placeholder="Enter Your Name" class=" flex-1 p-3 rounded-md border-[0.5px] border-gray-700 outline-none bg-white">
+                            <input type="email" placeholder="Enter Your Email" class=" flex-1 p-3 rounded-md border-[0.5px] border-gray-700 outline-none bg-white">
+                       
+                        </div>
+                    </form>
                 </div>
+
        
 
 
