--- a/index.html
+++ b/index.html
@@ -281,10 +281,12 @@
                     <form action="" class="max-w-2xl mx-auto">
                         <!--creating a row-->
                         <div class="mt-20 grid grid-cols-2 gap-6 mb-8">
-                            <input type="text" placeholder="Enter Your Name" class=" flex-1 p-3 rounded-md border-[0.5px] border-gray-700 outline-none bg-white">
-                            <input type="email" placeholder="Enter Your Email" class=" flex-1 p-3 rounded-md border-[0.5px] border-gray-700 outline-none bg-white">
+                            <input type="text" placeholder="Enter Your Name" class=" flex-1 p-3 rounded-md border-[0.5px] border-gray-400 outline-none bg-white">
+                            <input type="email" placeholder="Enter Your Email" class=" flex-1 p-3 rounded-md border-[0.5px] border-gray-400 outline-none bg-white">
                        
                         </div>
+
+                        <textarea rows = "6" placeholder="Enter your message" class="w-full outline-none border-[0.5px] border-gray-400 p-3 rounded-md bg-white mb-6"></textarea>
                     </form>
                 </div>
 
