--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <nav class="flex w-full items-center justify-between z-50 fixed container px-3 lg:px-4 xl:px-[8%] py-2 backdrop-blur">
             <div>
-                <img src="./images/developer (1).png" class="w-14 h-18 m-6 cursor-pointer"/>
+                <img src="./images/developer (1) copy.png" class="w-14 h-18 m-6 cursor-pointer"/>
             </div>
 
             <div>
@@ -287,6 +287,8 @@
                         </div>
 
                         <textarea rows = "6" placeholder="Enter your message" class="w-full outline-none border-[0.5px] border-gray-400 p-3 rounded-md bg-white mb-6"></textarea>
+
+                        <button class="">Submit <img src="./images/right-arrow-white.png" class="w-4"></button>
                     </form>
                 </div>
 
