image and bg color updated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./tailwind.config.js"></script>
 </head>
-<body class="overflow-x-hidden bg-gradient-to-r from-violet-200 to-pink-200">
+<body class="overflow-x-hidden bg-gradient-to-r from-pink-100 to-pink-500">
 
     <!--<div class="w-full h-screen bg-no-repeat"
     style="background-image: url(/images/header-bg-color.png);"></div>-->
@@ -52,7 +52,7 @@
 
     <!-------------Hero section----------------------------->
     <div class="w-11/12 h-screen text-center max-w-3xl mx-auto flex flex-col justify-center items-center gap-4">
-        <img src="./images/women-web-developer-with-laptop (1).png" class="w-30 rounded-full mt-24">
+        <img src="./images/women-web-developer-with-laptop (5).png" class="w-30 rounded-full mt-24">
         <h1 class="flex gap-2 text-xl md:text-2xl mb-3">Hello Iam Arpita Das Gupta<img src="/images/hand-icon.png" class="w-6"></h1>
         <h3 class="text-3xl sm:text-5xl lg:text-[40px]">I am a frontend developer based in Bengaluru</h3>
         <p class="max-w-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus maxime architecto quos cupiditate dolor dolore, officiis molestias. Distinctio ratione repudiandae earum voluptate qui delectus voluptas culpa optio, unde natus.</p>
