--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
                         <textarea rows = "6" placeholder="Enter your message" class="w-full outline-none border-[0.5px] border-gray-400 p-3 rounded-md bg-white mb-6"></textarea>
 
-                        <button class="">Submit <img src="./images/right-arrow-white.png" class="w-4"></button>
+                        <button class="py-3 px-8 w-max flex items-center justify-between gap-2 bg-black/80 text-white rounded-full mx-auto hover:bg-black duration-500">Submit <img src="./images/right-arrow-white.png" class="w-4"></button>
                     </form>
                 </div>
 
