--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 <div class="mt-20">
     <div class="text-center">
         <img src="/images/developer (1) copy.png" class="w-20 mx-auto mb-4">
-        <div>
+        <div class="w-max flex items-center gap-2 mx-auto">
             <img src="/images/mail_icon.png" class="w-6">
             <p>arpitadasgupta2599@gmail.com</p>
         </div>
