--- a/index.html
+++ b/index.html
@@ -303,6 +303,10 @@
             <p>arpitadasgupta2599@gmail.com</p>
         </div>
     </div>
+
+    <div>
+        <p>© 2024 Arpita Das Gupta. All rights reserved.</p>
+    </div>
     
 </div>
        
