--- a/index.html
+++ b/index.html
@@ -306,6 +306,10 @@
 
     <div>
         <p>© 2024 Arpita Das Gupta. All rights reserved.</p>
+        <ul>
+            <li><a href="https://github.com/Argupta99">Github</a></li>
+            <li><a href=""</li>
+        </ul>
     </div>
     
 </div>
