--- a/index.html
+++ b/index.html
@@ -308,7 +308,8 @@
         <p>© 2024 Arpita Das Gupta. All rights reserved.</p>
         <ul>
             <li><a href="https://github.com/Argupta99">Github</a></li>
-            <li><a href=""</li>
+            <li><a href="https://www.linkedin.com/in/arpita-dasgupta1999">Linkdln</a></li>
+            <li><a href="https://x.com/ArpitaD92630713?t=dQdeNIDjU0L0uTz9aAym0Q&s=08">Twitter</a></li>
         </ul>
     </div>
     
