--- a/index.html
+++ b/index.html
@@ -298,15 +298,15 @@
 <div class="mt-20">
     <div class="text-center">
         <img src="/images/developer (1) copy.png" class="w-20 mx-auto mb-4">
-        <div class="w-max flex items-center gap-2 mx-auto">
+        <div class="w-max flex items-center gap-2 mx-auto mb-8">
             <img src="/images/mail_icon.png" class="w-6">
             <p>arpitadasgupta2599@gmail.com</p>
         </div>
     </div>
 
-    <div>
+    <div class="text-center sm:flex items-center justify-between mb-12 border-t border-gray-800 mx-[10%] my-12 py-6">
         <p>© 2024 Arpita Das Gupta. All rights reserved.</p>
-        <ul>
+        <ul class="flex gap-8 items-center justify-center sm:mt-0">
             <li><a href="https://github.com/Argupta99">Github</a></li>
             <li><a href="https://www.linkedin.com/in/arpita-dasgupta1999">Linkdln</a></li>
             <li><a href="https://x.com/ArpitaD92630713?t=dQdeNIDjU0L0uTz9aAym0Q&s=08">Twitter</a></li>
