one nav menu added

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
             <div>
                 <ul class="list-none md:flex items-center gap-8 lg:gap-12  px-12 py-3 rounded-full hidden bg-white shadow-sm bg-opacity-50">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#project">Project</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#work">My Work</a></li>
             <li><a href="#contact">Contact</a></li>
                 </ul>
 
