--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
 
                 <!---Contact--->
-                <div class="w-full px-12 py-20 scroll-mt-20 bg-[url('./images/footer-bg-color.png')] bg-no-repeat bg:[lenght:90%_auto] bg-center">
+                <div id = "contact" class="w-full px-12 py-20 scroll-mt-20 bg-[url('./images/footer-bg-color.png')] bg-no-repeat bg:[lenght:90%_auto] bg-center">
                     <h4 class="text-center mb-2 text-lg">Connect with me</h4>
                     <h2 class="text-center text-5xl">Get in touch</h2>
                     <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12">I'd love to hear from you! If you have any questions, comments or feedback, please use the form below.</p>
