--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="flex-1">
                 <p class="mb-10 max-w-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sit! Error sapiente similique, ab beatae cupiditate ducimus dolore temporibus illum.</p>
 
-                <ul class="grid grid-cols-1 sm:grid-cols-3 gap-6 max-w-2xl">
+                <ul class="grid grid-cols-webApp sm:grid-cols-3 gap-6 max-w-2xl">
                     <li class="border-[0.5px] border-gray-500 rounded-xl p-6 cursor-pointer hover:translate-y-1 duration-500">
                         <img src="/images/code-icon.png" class="w-7 mt-3">
                         <h3 class="my-4 font-semibold text-gray-400">Languages</h3>
@@ -119,7 +119,7 @@
                 </ul>
 
                 <h4 class="my-6 text-gray-700">Tools I use</h4>
-                <ul class="grid grid-cols-7 items-center justify-center gap-3 max-w-2xl">
+                <ul class="flex items-center justify-center gap-12 max-w-2xl">
                     <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer
                     hover:translate-y-1 duration-500"><img src="/images/vscode.png" class="w-5 sm:w-7"></li>
                     <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer
@@ -149,7 +149,7 @@
             <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12">
                 I am a frontend developer from Bengaluru, Karnataka, specializing in creating responsive and engaging web interfaces.</p>
 
-                <div class="grid grid-cols-4 gap-6 my-20">
+                <div class="grid grid-cols-webApp gap-6 my-20">
                     <!--First card-->
                     <div class="border border-gray-500 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer
                     hover:bg-[#fcf4ff]
@@ -200,7 +200,7 @@
             <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12">
                 Welcome to my web development portfolio! Explore a collection of projects showcasing my expertise in front-end development.</p>
 
-                <div class="grid grid-cols-4 my-20 gap-5">
+                <div class="grid grid-cols-webApp my-20 gap-5">
 
                     <!--First card-->
                  <div class="aspect-square bg-[url('./images/work-1.png')] bg-no-repeat bg-cover bg-center relative rounded-lg cursor-pointer group">
@@ -281,7 +281,7 @@
 
                     <form action="" class="max-w-2xl mx-auto">
                         <!--creating a row-->
-                        <div class="mt-20 grid grid-cols-2 gap-6 mb-8">
+                        <div class="mt-20 grid grid-cols-webApp gap-6 mb-8">
                             <input type="text" placeholder="Enter Your Name" class=" flex-1 p-3 rounded-md border-[0.5px] border-gray-400 outline-none bg-white">
                             <input type="email" placeholder="Enter Your Email" class=" flex-1 p-3 rounded-md border-[0.5px] border-gray-400 outline-none bg-white">
                        
