--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="flex-1">
                 <p class="mb-10 max-w-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sit! Error sapiente similique, ab beatae cupiditate ducimus dolore temporibus illum.</p>
 
-                <ul class="grid grid-cols-webApp sm:grid-cols-3 gap-6 max-w-2xl">
+                <ul class="grid grid-cols-1 sm:grid-cols-webApp gap-6 max-w-2xl">
                     <li class="border-[0.5px] border-gray-500 rounded-xl p-6 cursor-pointer hover:translate-y-1 duration-500">
                         <img src="/images/code-icon.png" class="w-7 mt-3">
                         <h3 class="my-4 font-semibold text-gray-400">Languages</h3>
