--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./tailwind.config.js"></script>
+
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ovo&display=swap" rel="stylesheet">
 </head>
 <body class="overflow-x-hidden bg-gradient-to-r from-pink-200 via-pink-400 to-pink-200">
 
