--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ovo&display=swap" rel="stylesheet">
 </head>
-<body class="overflow-x-hidden bg-gradient-to-r from-pink-200 via-pink-400 to-pink-200">
+<body class="overflow-x-hidden bg-gradient-to-r from-pink-200 via-pink-400 to-pink-200 font-Outfit">
 
     <!--<div class="w-full h-screen bg-no-repeat"
     style="background-image: url(/images/header-bg-color.png);"></div>-->
