font ovo added in nav ul

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div>
-                <ul class="list-none md:flex items-center gap-8 lg:gap-12  px-12 py-3 rounded-full hidden bg-white shadow-sm bg-opacity-50">
+                <ul class="list-none md:flex items-center gap-8 lg:gap-12  px-12 py-3 rounded-full hidden bg-white shadow-sm bg-opacity-50 font-Ovo">
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
