--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <!--mobile responsiveness-->
         <ul id="sideMenu" class="flex md:hidden flex-col py-20 px-20 fixed -right-64 top-0 bottom-0 h-screen transition duration-500 bg-rose-50 gap-4">
-            <div class="right-6 top-6 absolute">
+            <div class="right-6 top-6 absolute font-Ovo">
                 <img src="/images/close-black.png" class="w-5">
             </div>
             <li><a href="#home">Home</a></li>
