hero section font added

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <!-------------Hero section----------------------------->
     <div class="w-11/12 h-screen text-center max-w-3xl mx-auto flex flex-col justify-center items-center gap-4">
         <img src="./images/women-web-developer-with-laptop (5).png" class="w-30 rounded-full mt-24">
-        <h1 class="flex gap-2 text-xl md:text-2xl mb-3">Hello Iam Arpita Das Gupta<img src="/images/hand-icon.png" class="w-6"></h1>
+        <h1 class="flex gap-2 text-xl md:text-2xl mb-3 font-Ovo">Hello Iam Arpita Das Gupta<img src="/images/hand-icon.png" class="w-6"></h1>
         <h3 class="text-3xl sm:text-5xl lg:text-[40px]">I am a frontend developer based in Bengaluru</h3>
-        <p class="max-w-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus maxime architecto quos cupiditate dolor dolore, officiis molestias. Distinctio ratione repudiandae earum voluptate qui delectus voluptas culpa optio, unde natus.</p>
+        <p class="max-w-2xl font-Ovo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus maxime architecto quos cupiditate dolor dolore, officiis molestias. Distinctio ratione repudiandae earum voluptate qui delectus voluptas culpa optio, unde natus.</p>
           
         <div class="flex flex-col sm:flex-row items-center gap-4 mt-4">
             <a href="#contact" class="border rounded-full px-10 py-2 bg-gradient-to-t from-blue-900 to-pink-500 text-white flex items-center gap-2">Contact Me!<img src="/images/right-arrow-white.png" alt="" class="w-4"></a>
