about section font added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ovo&display=swap" rel="stylesheet">
 </head>
-<body class="overflow-x-hidden bg-gradient-to-r from-pink-200 via-pink-400 to-pink-200 font-Outfit">
+<body class="overflow-x-hidden bg-gradient-to-r from-pink-200 via-pink-400 to-pink-200 font-Outfit leading-6">
 
     <!--<div class="w-full h-screen bg-no-repeat"
     style="background-image: url(/images/header-bg-color.png);"></div>-->
@@ -57,7 +57,7 @@
 
 
     <!-------------Hero section----------------------------->
-    <div class="w-11/12 h-screen text-center max-w-3xl mx-auto flex flex-col justify-center items-center gap-4">
+    <div class="w-11/12 h-screen text-center max-w-3xl mx-auto flex flex-col justify-center items-center gap-4 h-screen">
         <img src="./images/women-web-developer-with-laptop (5).png" class="w-30 rounded-full mt-24">
         <h1 class="flex gap-2 text-xl md:text-2xl mb-3 font-Ovo">Hello Iam Arpita Das Gupta<img src="/images/hand-icon.png" class="w-6"></h1>
         <h3 class="text-3xl sm:text-5xl lg:text-[40px]">I am a frontend developer based in Bengaluru</h3>
@@ -76,8 +76,8 @@
 
     <!-------About me section-->
     <div id="about" class="w-full px-12 py-10 scroll-mt-20">
-        <h4 class="text-center mb-2 text-lg">Introduction</h4>
-        <h2 class="text-center text-4xl">About Me</h2>
+        <h4 class="text-center mb-2 text-lg font-Ovo">Introduction</h4>
+        <h2 class="text-center text-4xl font-Ovo">About Me</h2>
 
         <div class="flex flex-col lg:flex-row w-full gap-20 my-20 items-center">
             <div class="relative max-w-max mx-auto"><img src="/images/girl-walk-in-autumn-with-her-dog.png" class="w-64 sm:w-80 rounded-3xl max-w-none">
@@ -95,7 +95,7 @@
             <!--for the text in the image--for better UI-->
         
             <div class="flex-1">
-                <p class="mb-10 max-w-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sit! Error sapiente similique, ab beatae cupiditate ducimus dolore temporibus illum.</p>
+                <p class="mb-10 max-w-2xl font-Ovo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sit! Error sapiente similique, ab beatae cupiditate ducimus dolore temporibus illum.</p>
 
                 <ul class="grid grid-cols-1 sm:grid-cols-webApp gap-6 max-w-2xl">
                     <li class="border-[0.5px] border-gray-500 rounded-xl p-6 cursor-pointer hover:translate-y-1 duration-500">
@@ -123,7 +123,7 @@
                     </li>
                 </ul>
 
-                <h4 class="my-6 text-gray-700">Tools I use</h4>
+                <h4 class="my-6 text-gray-700 font-Ovo">Tools I use</h4>
                 <ul class="flex items-center justify-center gap-12 max-w-2xl">
                     <li class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer
                     hover:translate-y-1 duration-500"><img src="/images/vscode.png" class="w-5 sm:w-7"></li>
