service section font added

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 
         <!--Services---------------------------->
         <div id="services" class="w-full scroll-mt-20 py-10 px-12">
-            <h4 class="text-center mb-2 text-lg">What I Offer</h4>
-            <h2 class="text-center text-5xl">My services</h2>
-            <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12">
+            <h4 class="text-center mb-2 text-lg font-Ovo">What I Offer</h4>
+            <h2 class="text-center text-5xl font-Ovo">My services</h2>
+            <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12 font-Ovo">
                 I am a frontend developer from Bengaluru, Karnataka, specializing in creating responsive and engaging web interfaces.</p>
 
                 <div class="grid grid-cols-webApp gap-6 my-20">
