--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
         <!--My work section-->
        
         <div id="work" class="w-full scroll-mt-20 py-10 px-12">
-            <h4 class="text-center mb-2 text-lg">My Portfolio</h4>
-            <h2 class="text-center text-5xl">My Latest Work</h2>
-            <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12">
+            <h4 class="text-center mb-2 text-lg font-Ovo">My Portfolio</h4>
+            <h2 class="text-center text-5xl font-Ovo">My Latest Work</h2>
+            <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12 font-Ovo">
                 Welcome to my web development portfolio! Explore a collection of projects showcasing my expertise in front-end development.</p>
 
                 <div class="grid grid-cols-webApp my-20 gap-5">
