contact section font added

--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
 
                 <!---Contact--->
                 <div id = "contact" class="w-full px-12 py-20 scroll-mt-20 bg-[url('./images/footer-bg-color.png')] bg-no-repeat bg:[lenght:90%_auto] bg-center">
-                    <h4 class="text-center mb-2 text-lg">Connect with me</h4>
-                    <h2 class="text-center text-5xl">Get in touch</h2>
-                    <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12">I'd love to hear from you! If you have any questions, comments or feedback, please use the form below.</p>
+                    <h4 class="text-center mb-2 text-lg font-Ovo">Connect with me</h4>
+                    <h2 class="text-center text-5xl font-Ovo">Get in touch</h2>
+                    <p class="text-center mx-w-2xl mx-auto mt-5 -mb-12 font-Ovo">I'd love to hear from you! If you have any questions, comments or feedback, please use the form below.</p>
 
                     <form action="" class="max-w-2xl mx-auto">
                         <!--creating a row-->
