--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
 
 
     <!-------About me section-->
-    <div id="about" class="w-full px-12 py-10 scroll-mt-20">
+  <div class="min-h-screen flex items-center justify-center">
+    <div id="about" class="w-full max-w-7xl px-12 py-10 scroll-mt-20">
         <h4 class="text-center mb-2 text-lg font-Ovo">Introduction</h4>
         <h2 class="text-center text-4xl font-Ovo">About Me</h2>
 
-        <div class="flex flex-col lg:flex-row w-full gap-20 my-20 items-center">
+        <div class="flex flex-col lg:flex-row w-full gap-20 my-20 items-center justify-center">
             <div class="relative max-w-max mx-auto"><img src="/images/girl-walk-in-autumn-with-her-dog.png" class="w-64 sm:w-80 rounded-3xl max-w-none">
             
                 <!--for the text in the image--for better UI-->
@@ -97,7 +98,7 @@
             <div class="flex-1">
                 <p class="mb-10 max-w-2xl font-Ovo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sit! Error sapiente similique, ab beatae cupiditate ducimus dolore temporibus illum.</p>
 
-                <ul class="grid grid-cols-1 sm:grid-cols-webApp gap-6 max-w-2xl">
+                <ul class="grid grid-cols-1 sm:grid-cols-webApp gap-6 max-w-2xl justify-center items-center">
                     <li class="border-[0.5px] border-gray-500 rounded-xl p-6 cursor-pointer hover:translate-y-1 duration-500">
                         <img src="/images/code-icon.png" class="w-7 mt-3">
                         <h3 class="my-4 font-semibold text-gray-400">Languages</h3>
@@ -145,7 +146,8 @@
             </div>
         </div>
     </div>
-    
+</div>
+
 
         <!--Services---------------------------->
         <div id="services" class="w-full scroll-mt-20 py-10 px-12">
