--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="scroll-smooth ">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ovo&display=swap" rel="stylesheet">
 </head>
-<body class="overflow-x-hidden bg-gradient-to-r from-pink-200 via-pink-400 to-pink-200 font-Outfit leading-6">
+<body class="overflow-x-hidden bg-gradient-to-r from-pink-200 via-pink-400 to-pink-200 font-Outfit leading-6 dark:bg-darkTheme dark:text-white">
 
     <!--<div class="w-full h-screen bg-no-repeat"
     style="background-image: url(/images/header-bg-color.png);"></div>-->
@@ -38,7 +38,7 @@
             </div>
             <div class="justify-center px-16 flex gap-3">
             <button><img src="./images/moon_icon.png" class="w-6"></button>
-            <button class="block md:hidden ml-3"><img src="./images/menu-black.png" class="w-6"></button>
+            <button class="block md:hidden ml-3" onclick="openMenu()"><img src="./images/menu-black.png" class="w-6"></button>
         </div>
 
         <!--mobile responsiveness-->
