--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             </div>
             <div class="justify-center px-16 flex gap-3">
                 <button id="themeToggle"" aria-label="Toggle dark/light mode">
-                    <img src="./images/moon_icon.png" class="w-6" alt="Toggle Theme">
+                    <img src="./images/moon_icon.png" class="w-6 dark:hidden" alt="Toggle Theme">
+                    <img src="./images/sun_icon.png" class="w-6 hidden dark:block" alt="Toggle Theme">
                 </button>
                 
             <button class="block md:hidden ml-3" onclick="openMenu()"><img src="./images/menu-black.png" class="w-6"></button>
