dark/light menu

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                     <img src="./images/sun_icon.png" class="w-6 hidden dark:block" alt="Toggle Theme">
                 </button>
                 
-            <button class="block md:hidden ml-3" onclick="openMenu()"><img src="./images/menu-black.png" class="w-6"></button>
+            <button class="block md:hidden ml-3" onclick="openMenu()">
+                <img src="./images/menu-black.png" class="w-6 dark:hidden">
+                <img src="./images/menu-white.png" class="w-6 hidden dark:block"> 
+            
+            </button>
         </div>
 
         <!--mobile responsiveness-->
