--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
         <!--mobile responsiveness-->
         <ul id="sideMenu" class="flex md:hidden flex-col py-20 px-20 fixed -right-64 top-0 bottom-0 h-screen transition duration-500 bg-rose-50 gap-4">
-            <div class="right-6 top-6 absolute font-Ovo">
-                <img src="/images/close-black.png" class="w-5">
+            <div class="right-6 top-6 absolute font-Ovo" onclick="closeMenu()">
+                <img src="/images/close-black.png" class="w-5 cursor-pointer">
             </div>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#project">Project</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home" onclick="closeMenu()">Home</a></li>
+            <li><a href="#about" onclick="closeMenu()">About</a></li>
+            <li><a href="#project" onclick="closeMenu()">Project</a></li>
+            <li><a href="#contact" onclick="closeMenu()">Contact</a></li>
             
         </ul>
         </nav>
